src/test/deca/syntax/invalid/homemade/test/test_pars_inv_class_oubli_nom_class2.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 11 : Erreur (oubli nom de class)
//    
//
// Historique:
//    cree le 04/01/2023

class extends A {

}